--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,7 @@ p, img {
     
 }
 
-img {
+.indeximage {
     float: left;
     clear: left;
     margin: 20px;
@@ -108,6 +108,7 @@ img {
 }
 
 .footer {
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -144,17 +145,19 @@ input[type=text], select, textarea {
 }
 
 .imagecontainer {
+    margin: 20px;
+}
+
+.realimagecontainer {
     position: relative;
-    text-align: center;
 }
 
 .imagetext {
+    text-align: center;
+    margin: 0;
     position: absolute;
     bottom: 10px;
-}
-
-.nofloat {
-    float: none;
-    margin: 0;
+    width: 27.2%;
+    background: rgb(79, 185, 255)
 }
 
